# ftxui_minimal

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  _headers  index.html  main.cpp
.github/workflows/: main.yml
site/: index.html
